[gd_scene load_steps=28 format=3 uid="uid://bjwtshs5siyc0"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_nwwcj"]
[ext_resource type="Texture2D" uid="uid://3haarbpyde6a" path="res://assets/player_walk_set.png" id="2_hii87"]
[ext_resource type="Texture2D" uid="uid://dfdnmbv7iu1j" path="res://assets/fly2.png" id="2_nrnu1"]
[ext_resource type="PackedScene" uid="uid://bgob3k0tk53pk" path="res://nodes/ui/console.tscn" id="3_n6pc3"]
[ext_resource type="Texture2D" uid="uid://bi5u6vdoeuna2" path="res://assets/fly3.png" id="4_a0fnw"]
[ext_resource type="Texture2D" uid="uid://c7fy4srj6cw4f" path="res://assets/errors/matrix_error_1.png" id="4_ug1g2"]
[ext_resource type="Texture2D" uid="uid://bbv704be7hxh4" path="res://assets/errors/matrix_error_2.png" id="5_onrsk"]
[ext_resource type="Texture2D" uid="uid://3mhjew1bqgsk" path="res://assets/errors/matrix_error_3.png" id="6_di4aq"]
[ext_resource type="Texture2D" uid="uid://bcpmmg15oy3mb" path="res://assets/jump2.png" id="6_tcxb8"]
[ext_resource type="Texture2D" uid="uid://bdl1qx6ktfpwb" path="res://assets/jump3.png" id="7_dt41v"]
[ext_resource type="Texture2D" uid="uid://d2jylefbq4y0q" path="res://assets/errors/matrix_error_4.png" id="7_np5js"]
[ext_resource type="Texture2D" uid="uid://dqynpesko5cfv" path="res://assets/jump_1.png" id="8_3tp0s"]
[ext_resource type="AudioStream" uid="uid://nddy4ptom16o" path="res://assets/sound/noise.mp3" id="8_rurak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8cmqc"]
atlas = ExtResource("2_hii87")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8818"]
atlas = ExtResource("2_hii87")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_203e0"]
atlas = ExtResource("2_hii87")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vjj1"]
atlas = ExtResource("2_hii87")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfgdo"]
atlas = ExtResource("2_hii87")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6706"]
atlas = ExtResource("2_hii87")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhon1"]
atlas = ExtResource("2_hii87")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfiap"]
atlas = ExtResource("2_hii87")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpdli"]
atlas = ExtResource("2_hii87")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8sjc"]
atlas = ExtResource("2_hii87")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oou0k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nrnu1")
}, {
"duration": 1.0,
"texture": ExtResource("4_a0fnw")
}],
"loop": false,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cmqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8818")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_203e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vjj1")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tcxb8")
}, {
"duration": 1.0,
"texture": ExtResource("7_dt41v")
}, {
"duration": 1.0,
"texture": ExtResource("8_3tp0s")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfgdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6706")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhon1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfiap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpdli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8sjc")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bxb7g"]
radius = 16.5112
height = 59.4402

[sub_resource type="CircleShape2D" id="CircleShape2D_2ol63"]
radius = 85.0529

[sub_resource type="SpriteFrames" id="SpriteFrames_odb5k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ug1g2")
}, {
"duration": 1.0,
"texture": ExtResource("5_onrsk")
}, {
"duration": 1.0,
"texture": ExtResource("6_di4aq")
}, {
"duration": 1.0,
"texture": ExtResource("7_np5js")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(1.2113, 1.2113)
collision_layer = 3
collision_mask = 3
floor_max_angle = 1.0472
script = ExtResource("1_nwwcj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oou0k")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.65112)
shape = SubResource("CapsuleShape2D_bxb7g")

[node name="ConsoleZone" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConsoleZone"]
shape = SubResource("CircleShape2D_2ol63")

[node name="Console" parent="." instance=ExtResource("3_n6pc3")]
offset_left = -545.0
offset_top = -422.0
offset_right = -544.544
offset_bottom = -422.12

[node name="DashReload" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
top_level = true
sprite_frames = SubResource("SpriteFrames_odb5k")
frame_progress = 0.470403

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AnimatedSprite2D2"]
stream = ExtResource("8_rurak")
autoplay = true

[node name="Select" type="Node2D" parent="."]
visible = false
top_level = true
scale = Vector2(1.41128, 1.41128)

[node name="ColorRect" type="ColorRect" parent="Select"]
clip_children = 2
offset_left = -20.0
offset_top = -19.0
offset_right = 20.0
offset_bottom = 21.0
color = Color(0, 1, 1, 0.47451)

[node name="ColorRect" type="ColorRect" parent="Select/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 38.0
color = Color(0, 1, 1, 0.376471)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="ConsoleZone" to="." method="_on_console_trigger_entered"]
[connection signal="body_exited" from="ConsoleZone" to="." method="_on_console_trigger_exited"]
[connection signal="timeout" from="DashReload" to="." method="_on_dash_reload"]
[connection signal="animation_finished" from="AnimatedSprite2D2" to="." method="_on_error_animation_finished"]
